0.035 2025-01-16
  [Internal Changes]
    * Update .gitignore and MANIFEST.SKIP.
    
0.034001 2025-01-02
  [Bug Fix]
    * Fix a potential bug that the argument width on a method call is wrong.
0.034 2024-12-24
  [New Features]
    * Add Net::SSLeay::SSL_CTX#SSL_CTX_use_certificate method.
0.033 2024-12-21
  
  [Stability Improvement]
    * Unit tests and documentation are finised.
  [New Features]
    * Add the following fields to Net::SSLeay::SSL_CTX.
    
      has verify_callback : ro Net::SSLeay::Callback::Verify;
      
      has default_passwd_cb : ro Net::SSLeay::Callback::PemPassword;
      
      has alpn_select_cb : ro Net::SSLeay::Callback::AlpnSelect;
      
      has tlsext_servername_callback : ro Net::SSLeay::Callback::TlsextServername;
    
0.032 2024-12-20
  [New Features]
    * Add Net::SSLeay#get_version method.
  [Test Improvment]
    * Add tests for Net::SSLeay.
  [Document Improvement]
    * Improve docs for Net::SSLeay.
    * Fix links to OpenSSL document.
  
  [Bug Fix]
    * Fix a bug of reference counting of Net::SSLeay#set_SSL_CTX method.
  
  [Incompatible Changes]
    * Net::SSLeay#set_SSL_CTX throws an exception if the argument is undef.
    * The return type of Net::SSLeay#set_SSL_CTX method becomes void.

0.031 2024-12-19
  [New Features]
    * Add Net::SSLeay#select_next_proto method.
    * Add the following methods to Net::SSLeay::Constant class.
    
      static method SSL_TLSEXT_ERR_OK : int ();

      static method SSL_TLSEXT_ERR_ALERT_FATAL : int ();

      static method SSL_TLSEXT_ERR_NOACK : int ();

      static method OPENSSL_NPN_NEGOTIATED : int ();

      static method OPENSSL_NPN_NO_OVERLAP : int ();

  [Changes]
    * Change the definition of Net::SSLeay::SSL_CTX#set_alpn_select_cb method
      [Before]
        method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect);
      [After]
        method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect, $arg : object = undef);