@@ -1,6 +1,8 @@
 0.035 2025-01-16
   [Internal Changes]
     * Update .gitignore and MANIFEST.SKIP.
+  [Exception Changes]
+    * SSLeay#select_next_proto method throws an exception if $outlen_ref is not defined.
     
 0.034001 2025-01-02
   [Bug Fix]
